fixed color contrast issues

--- a/src/app/ui/layout/Header.module.css
+++ b/src/app/ui/layout/Header.module.css
@@ -40,7 +40,7 @@
   justify-content: center;
   text-decoration: none;
   color: inherit;
-  scale: 1.2;
+  scale: 1.5;
   transition: all 0.1s ease-in-out;
 }
 
